--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "grunt": "~0.4.5",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "adm-zip": "^0.4.7",
     "async": "^0.9.0",
     "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.8.0",
     "grunt-env": "^0.4.4",
     "grunt-preprocess": "^4.1.0",
     "request": "^2.53.0",
     "sqlite3": "^3.0.5"
   },
   "cordovaPlugins": [
-    "org.apache.cordova.inappbrowser"
+    "com.bez4pieci.cookies",
+    "com.synconset.cordovaHTTP",
+    "io.packmule.cookies",
+    "org.apache.cordova.inappbrowser",
+    {
+      "id": "org.crosswalk.engine",
+      "locator": "./engine/cordova-crosswalk-engine-c0.6.2"
+    }
   ]
 }
