--- a/www/manifest.json
+++ b/www/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Packmule for Destiny",
+  "name": "Packmule for Destiny (BETA)",
   "description": "Destiny inventory manager with aggregate views, filtering, loadouts, and more!",
-  "version": "0.17",
+  "version": "1.0.3",
   "manifest_version": 2,
   "permissions": [
     "cookies",
