--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,15 @@
     "lodash": "~3.5.0",
     "angular": "~1.3.15",
     "angular-ui-router": "~0.2.13",
-    "angular-material": "~0.8.3",
-    "angular-hammer": "monospaced/angular-hammer#~1.2.4"
+    "angular-material": "0.7.0",
+    "angular-hammer": "monospaced/angular-hammer#~1.2.4",
+    "ionic": "^1.0.0-rc.1"
   },
   "resolutions": {
     "angular-material": "~0.8.3",
-    "angular": "~1.3.15",
+    "angular": "1.3.15",
     "angular-ui-router": "~0.2.13",
-    "angular-animate": "1.3.x"
+    "angular-animate": "1.3.x",
+    "hammerjs": "~2.0.2"
   }
 }
