--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,10 @@
     "lodash": "~3.5.0",
     "angular": "~1.3.15",
     "angular-ui-router": "~0.2.13",
-    "angular-material": "0.7.0",
+    "angular-material": "latest",
     "angular-hammer": "monospaced/angular-hammer#~1.2.4",
-    "ionic": "^1.0.0-rc.1"
+    "ionic": "^1.0.0-rc.1",
+    "ngReact": "~0.1.4"
   },
   "resolutions": {
     "angular-material": "~0.8.3",
